@@ -7,3 +7,6 @@ line-length = 100
 target-version = ["py39", "py310", "py311"]
 skip-magic-trailing-comma = true
 include = "pre-commit|.*.py$"
+
+[tool.mypy]
+warn_no_return = 0
