@@ -3,5 +3,5 @@ from pathlib import Path
 from .tools import clargs
 
 
-def sort(path: Path = clargs.dir, /) -> None:
+def sort(*paths: Path) -> None:
     raise NotImplementedError
